plugins {
  id 'java'
  id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'mikeshafter'
version '2.20.1'

compileJava.options.encoding 'UTF-8'

repositories {
  maven { url 'https://papermc.io/repo/repository/maven-public/' }
  maven { url 'https://ci.mg-dev.eu/plugin/repository/everything' }
  maven { url 'https://jitpack.io' }
  maven { url 'https://oss.sonatype.org/content/groups/public/' }
  maven { url 'https://repo.mrivanplays.com/repository/maven-all/' }
  mavenLocal()
  mavenCentral()
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

dependencies {
  compileOnly 'io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT'
  compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
  compileOnly 'me.lokka30:treasury-api:1.2.1'
  compileOnly 'com.bergerkiller.bukkit:BKCommonLib:1.20.1-v1'

  compileOnly 'org.bergerhealer.cloud.commandframework:cloud-paper:1.8.0-SNAPSHOT'
  compileOnly 'org.bergerhealer.cloud.commandframework:cloud-annotations:1.8.0-SNAPSHOT'
  compileOnly 'org.bergerhealer.cloud.commandframework:cloud-minecraft-extras:1.8.0-SNAPSHOT'
}

shadowJar {
  minimize {}
  relocate ('cloud.commandframework', 'com.bergerkiller.bukkit.common.dep.cloud')
  relocate ('io.leangen.geantyref', 'com.bergerkiller.bukkit.common.dep.typetoken')
  relocate ('me.lucko.commodore', 'com.bergerkiller.bukkit.common.dep.me.lucko.commodore')
}

assemble {
  dependsOn shadowJar
}

test {
  useJUnitPlatform()
}
